--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,6 +8,12 @@
 <body>
 {% include header.html %}
 <div class="content">
+	<h1>
+		{{ page.title }}
+	</h1>
+	<p style="margin-bottom: 2rem">
+		{{ page.introduction }}
+	</p>
     {% for image in page.images %}
     <img src="{{ image.url }}" alt="{{ image.title }}">
     <details style="margin: .5rem 0 1.5rem 0">
