--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,5 @@
     <!-- Fonts -->
     <link href="/assets/fonts/TSTAR-Bold.css" rel="stylesheet">
     <link href="/assets/fonts/TSTAR-Regular.css" rel="stylesheet">
-<!--    <link href="/assets/fonts/TSTAR-Heavy.css" rel="stylesheet">-->
-<!--    <link href="/assets/fonts/TSTAR-Italic.css" rel="stylesheet">-->
+    <link href="/assets/fonts/TSTAR-Heavy.css" rel="stylesheet">
 </head>
