--- a/_sass/lib/_variables.scss
+++ b/_sass/lib/_variables.scss
@@ -1,7 +1,7 @@
 $primary-color: red;
 $light-grey: #bbb;
 $main-font: 'TSTAR-Regular',sans-serif;
-$bold-font: 'TSTAR-Bold',sans-serif;
+$bold-font: 'TSTAR-Heavy',sans-serif;
 
 // Width of the content area
 $content-width:    1200px !default;
