--- a/_sass/partials/navigation.scss
+++ b/_sass/partials/navigation.scss
@@ -9,7 +9,7 @@ nav {
     a {
         color: #000;
         display: block;
-        margin-bottom: 1rem;
+        margin-bottom: .6rem;
         text-decoration: none;
 
         &.active {
