--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -7,12 +7,12 @@
 
 <body>
   {% include header.html %}
+  <div class="content">
+	  <h1 style="margin-top: 22px;">
+		  {{ page.title }}
+	  </h1>
+	  {{ page.content | markdownify }}
 
-
-  <div class="content about">
-    {{ page.content | markdownify }}
-
-    <a href="#privacy" class="link">Privacy Policy</a> / <a href="#datenschutz" class="link">Datenschutzverordnung</a>
   </div>
 
   <div id="privacy" class="overlay">
