--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,7 +8,7 @@
 <body>
 {% include header.html %}
 <div class="content">
-	<h1>
+	<h1 style="margin-top: 22px;">
 		{{ page.title }}
 	</h1>
 	<p style="margin-bottom: 2rem">
